--- a/sys/.config/systemd/user/xss-lock.service
+++ b/sys/.config/systemd/user/xss-lock.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Session locker
-After=i3-wm.service
+After=xorg.service
 
 [Service]
 ExecStart=/usr/bin/xss-lock --transfer-sleep-lock -- i3lockr -p 8
